修复一系列bug： 1. 修复在1.21下的CUI报错； 2. 现支持在1.20.1使用java17运行；